# wechat-oap-api

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: auth.py  config.py  wechat.py
app/routers/: draft.py  freepublish.py  material.py  message.py
scripts/: docker-push.sh
skills/wechat-api/: SKILL.md
skills/wechat-api/assets/: theme.css
skills/wechat-api/scripts/: fix-draft.mjs  md2wechat.mjs  merge-videos.mjs  package-lock.json  package.json  replace-images.mjs  wechat.sh
tests/: conftest.py  test_api.py  test_auth.py  test_draft.py  test_freepublish.py  test_material.py  test_message.py  test_token_cache.py  test_wechat_client.py
